--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,41 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "java",
+            "name": "op",
+            "request": "launch",
+            "mainClass": "Operators.op",
+            "projectName": "TNP_77517ffd"
+        },
+        {
+            "type": "java",
+            "name": "tc",
+            "request": "launch",
+            "mainClass": "TypeConversion.tc",
+            "projectName": "TNP_77517ffd"
+        },
+        {
+            "type": "java",
+            "name": "variables",
+            "request": "launch",
+            "mainClass": "variables",
+            "projectName": "TNP_77517ffd"
+        },
+        {
+            "type": "java",
+            "name": "input",
+            "request": "launch",
+            "mainClass": "Input.input",
+            "projectName": "TNP_77517ffd"
+        },
+        {
+            "type": "java",
+            "name": "scanner",
+            "request": "launch",
+            "mainClass": "Input.scanner",
+            "projectName": "TNP_77517ffd"
+        }
+    ]
 }
